<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" /-->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"

            />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_task"
            android:title="@string/menu_task"

            />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat"

            />

        <!--item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" /-->
        <!--item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" /-->
    </group>

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_pay"
            android:title="@string/menu_pay" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notifications" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help"/>
        <item
            android:id="@+id/nav_exit"
            android:title="@string/menu_exit"/>


    </group>


</menu>