<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aplicacion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_task"
            app:destination="@id/nav_task"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_chat"
            app:destination="@id/nav_chat"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_notifications"
            app:destination="@id/nav_notifications"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_plan"
            app:destination="@id/nav_plan"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_booking"
            app:destination="@id/nav_booking"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_help"
            app:destination="@id/nav_help"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <!--fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.aplicacion.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.aplicacion.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" /-->

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.aplicacion.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        android:layout="@layout/fragment_profile"
        />
    <fragment
        android:id="@+id/nav_task"
        android:name="com.example.aplicacion.ui.task.TaskFragment"
        android:label="@string/menu_task"
        android:layout="@layout/fragment_task"
        />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.aplicacion.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        android:layout="@layout/fragment_chat"
        />





    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.aplicacion.ui.plan.PlanFragment"
        android:label="@string/menu_pay"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/nav_booking"
        android:name="com.example.aplicacion.ui.booking.BookingFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_booking" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.aplicacion.ui.notification.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.aplicacion.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help"/>
    <fragment
        android:id="@+id/nav_exit"
        android:label="@string/menu_exit"
        android:name="com.example.aplicacion.ui.exit.ExitFragment"
        tools:layout="@layout/fragment_exit"/>


</navigation>